--- a/package.json
+++ b/package.json
@@ -2,10 +2,20 @@
   "name": "rest-api-legal-services",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
+    "start": "ts-node ./node_modules/nodemon/bin/nodemon.js ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "levDm",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "boom": "^7.3.0",
+    "fastify": "^4.24.3",
+    "fastify-swagger": "^5.2.0",
+    "mongoose": "^8.0.3",
+    "nodemon": "^3.0.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
+  }
 }
