--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
   "author": "levDm",
   "license": "ISC",
   "dependencies": {
-    "boom": "^7.3.0",
+    "@fastify/swagger": "^8.12.1",
+    "@fastify/swagger-ui": "^2.0.1",
     "fastify": "^4.24.3",
-    "fastify-swagger": "^5.2.0",
-    "mongoose": "^8.0.3",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
