--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "ts-node ./node_modules/nodemon/bin/nodemon.js ./src/index.ts",
+    "start": "ts-node ./node_modules/nodemon/bin/nodemon.js ./index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "levDm",
